[package]
name = "mfornode"
version = "0.1.0"
edition = "2021"
build = "build.rs"
repository = "https://github.com/berlinen/mfornode.git"
description = "Fast and simple Node.js version manager"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.3", features = ["derive", "env"] }
serde_json = "1.0"
chrono = { version = "0.4.26", features = ["serde"] }
tar = "0.4"
xz2 = "0.1"
node-semver = "2.1"
dirs = "5.0"
colored = "2.0"
zip = " 2.1"
tempfile = "3.6"
indoc = "2.0"
log = "0.4"
env_logger = "0.11"
encoding_rs_io = "0.1"
reqwest = { version = "0.12.4", features = [
  "blocking",
  "json",
  "rustls-tls",
  "rustls-tls-native-roots",
  "brotli",
], default-features = false }
url = "2.4"
sysinfo = "0.30"
thiserror = "1.0.44"
clap_complete = "4.3.1"
anyhow = "1.0.71"

[dev-dependencies]
pretty_assertions = "1.4"
duct = "0.13"
test-log = "0.2"

[build-dependencies]
embed-resource = "2.4"

[target.'cfg(windows)'.dependencies]
csv = "1.2.2"
junction = "1.0.0"
